--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <h1>This the title of the webpage</h1>
-    
+    <p>This is a body paragraph for the head</p>
   </head>
+  <body>
+    <p>This is a body paragraph for the body</p>
+  </body>
 </html>
