--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <!doctype HTML>
 <html>
   <head>
-    <h1>This the title of the webpage</h1>
+    <title><h1>This the title of the webpage</h1></title>
     <p>This is a body paragraph for the head</p>
   </head>
   
   <body>
-    <p>This is a body paragraph for the body</p>
+    This is a body paragraph for the body
   </body>
   
 </html>
