Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype HTML>
 <html>
 <head>
-    <title><h1>This the title of the webpage</h1></title>
+    <title>This the title of the webpage</title>
     <p>This is a body paragraph for the head</p>
 </head>
     
