Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <html>
 <head>
     <title>This the title of the webpage</title>
-    <p>This is a body paragraph for the head</p>
 </head>
     
 <body>
-    This is a body paragraph for the body
+    <p>This is a body paragraph for the body</p>
 </body>
   
 
